# flow-pipe-stage-plugins

./: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-image.yml
cmake/: AwsSdk.cmake
flows/: README.md  csv_to_parquet_arrow.yaml  csv_to_parquet_s3.yaml
proto/arrow/: CMakeLists.txt  arrow_common.proto  arrow_fs_azure.proto  arrow_fs_gcs.proto  arrow_fs_hdfs.proto  arrow_fs_s3.proto  arrow_schema.proto
stages/csv_arrow_sink/: CMakeLists.txt  README.md  csv_arrow_sink.cc  csv_arrow_sink.proto
stages/csv_arrow_source/: CMakeLists.txt  README.md  csv_arrow_source.cc  csv_arrow_source.proto
stages/csv_sink/: CMakeLists.txt  README.md  csv_sink.cc  csv_sink.proto
stages/csv_source/: CMakeLists.txt  README.md  csv_source.cc  csv_source.proto
stages/file_sink/: CMakeLists.txt  README.md  file_sink.cc  file_sink.proto
stages/file_source/: CMakeLists.txt  README.md  file_source.cc  file_source.proto
stages/http_sink/: CMakeLists.txt  README.md  http_sink.cc  http_sink.proto
stages/json_arrow_source/: CMakeLists.txt  README.md  json_arrow_source.cc  json_arrow_source.proto
stages/kafka_sink/: CMakeLists.txt  README.md  kafka_sink.cc  kafka_sink.proto
stages/kafka_source/: CMakeLists.txt  README.md  kafka_source.cc  kafka_source.proto
stages/nats_jetstream_sink/: CMakeLists.txt  README.md  nats_jetstream_sink.cc  nats_jetstream_sink.proto
stages/nats_jetstream_source/: CMakeLists.txt  README.md  nats_jetstream_source.cc  nats_jetstream_source.proto
stages/nats_sink/: CMakeLists.txt  README.md  nats_sink.cc  nats_sink.proto
stages/nats_source/: CMakeLists.txt  README.md  nats_source.cc  nats_source.proto
stages/opencv_dnn_inference/: CMakeLists.txt  README.md  opencv_dnn_inference.cc  opencv_dnn_inference.proto
stages/opencv_dnn_inference_transform/: CMakeLists.txt  README.md  opencv_dnn_inference_transform.cc  opencv_dnn_inference_transform.proto
stages/opencv_resize_letterbox_transform/: CMakeLists.txt  README.md  opencv_resize_letterbox_transform.cc  opencv_resize_letterbox_transform.proto
stages/orc_arrow_sink/: CMakeLists.txt  README.md  orc_arrow_sink.cc  orc_arrow_sink.proto
stages/orc_arrow_source/: CMakeLists.txt  README.md  orc_arrow_source.cc  orc_arrow_source.proto
stages/parquet_arrow_sink/: CMakeLists.txt  README.md  parquet_arrow_sink.cc  parquet_arrow_sink.proto
stages/parquet_arrow_source/: CMakeLists.txt  README.md  parquet_arrow_source.cc  parquet_arrow_source.proto
stages/redis_pubsub_sink/: CMakeLists.txt  README.md  redis_pubsub_sink.cc  redis_pubsub_sink.proto
stages/redis_pubsub_source/: CMakeLists.txt  README.md  redis_pubsub_source.cc  redis_pubsub_source.proto
stages/redis_stream_sink/: CMakeLists.txt  README.md  redis_stream_sink.cc  redis_stream_sink.proto
stages/redis_stream_source/: CMakeLists.txt  README.md  redis_stream_source.cc  redis_stream_source.proto
stages/s3_common/: CMakeLists.txt  aws_sdk_guard.cc  aws_sdk_guard.h
stages/s3_sink/: CMakeLists.txt  README.md  s3_sink.cc  s3_sink.proto
stages/s3_source/: CMakeLists.txt  README.md  s3_source.cc  s3_source.proto
stages/sns_common/: CMakeLists.txt  aws_sdk_guard.cc  aws_sdk_guard.h
stages/sns_sink/: CMakeLists.txt  README.md  sns_sink.cc  sns_sink.proto
stages/sqs_common/: CMakeLists.txt  aws_sdk_guard.cc  aws_sdk_guard.h
stages/sqs_sink/: CMakeLists.txt  README.md  sqs_sink.cc  sqs_sink.proto
stages/sqs_source/: CMakeLists.txt  README.md  sqs_source.cc  sqs_source.proto
stages/tcp_sink/: CMakeLists.txt  README.md  tcp_sink.cc  tcp_sink.proto
stages/tcp_source/: CMakeLists.txt  README.md  tcp_source.cc  tcp_source.proto
stages/udp_sink/: CMakeLists.txt  README.md  udp_sink.cc  udp_sink.proto
stages/udp_source/: CMakeLists.txt  README.md  udp_source.cc  udp_source.proto
tests/: CMakeLists.txt  arrow_schema_proto_tests.cc  arrow_stage_test_support.h  arrow_stage_tests.cc  csv_arrow_sink_tests.cc  csv_arrow_source_tests.cc  file_stage_tests.cc  json_arrow_source_tests.cc  parquet_arrow_sink_tests.cc  parquet_arrow_source_tests.cc
util/: CMakeLists.txt  arrow.h  aws_sdk_guard.cc  aws_sdk_guard.h  redis_client.h
